--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ author :
   name : Brian Yuan(袁小雍)
   email : chbrian77@gmail.com
   github : chbrian
+  weibo : chbrian
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
