--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@ tagline: tech, thought, and communication
 timezone: Asia/Shanghai
 encoding: UTF-8
 
+markdown: kramdown
+
 author :
   name : Brian Yuan(袁小雍)
   email : chbrian77@gmail.com
